--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_wzorcowy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_wzorcowy.xhtml
@@ -8,7 +8,7 @@
     xmlns:bcf="http://brzaskun.com/facelets">
    
     <p:dialog id="dialogpierwszywzorcowy" header="Plan kont WZORCOWY - struktura" widgetVar="dialogplankontwzorcowy" 
-              resizable="false" onShow="ustawdialog('dialogpierwszywzorcowy','menuustawienia', 1620, 750);ustalmaxlevel('formwzorcowy:dataListwzorcowy_data');" closeOnEscape="true" onHide="resetujdialog('dialogpierwszywzorcowy');"  >
+              resizable="false" onShow="ustawdialog('dialogpierwszywzorcowy','menuustawienia', 1700, 750);ustalmaxlevel('formwzorcowy:dataListwzorcowy_data');" closeOnEscape="true" onHide="resetujdialog('dialogpierwszywzorcowy');"  >
         <h:form id="formwzorcowy">
             <p:contextMenu id="contextforplankontwzorcowy" for="dataListwzorcowy" style="width: 200px;">
                 <p:menuitem value="Nowe syntetyczne" icon="ui-icon-circle-plus" actionListener="#{planKontView.dodajdowzorca()}" onclick="PF('nowekontosyntetyczne').show();" />
@@ -40,10 +40,11 @@
                                 }
                         </script>-->
             <p:panelGrid columns="10">
-                <p:commandButton id="rozwinwsz" value="rozwiń wszystkie"  onclick="rozwinwszystkie('formwzorcowy:dataListwzorcowy_data')" global="false" style="float: left; width: 130px;" />
+<!--                <p:commandButton id="rozwinwsz" value="rozwiń wszystkie"  onclick="rozwinwszystkie('formwzorcowy:dataListwzorcowy_data')" global="false" style="float: left; width: 130px;" />
                 <p:commandButton id="rozwin" value="rozwiń poziom" onclick="rozwinjeden('formwzorcowy:dataListwzorcowy_data')" global="false" style="float: left; width: 130px;" />
                 <p:commandButton id="zwinwsz" value="zwiń wszystkie" onclick="zwinwszystkie('formwzorcowy:dataListwzorcowy_data')" global="false" style="float: left; width: 130px;" />
-                <p:commandButton id="zwinw" value="zwiń poziom" onclick="zwinjeden('formwzorcowy:dataListwzorcowy_data')" global="false" style="float: left; width: 130px;" />
+                <p:commandButton id="zwinw" value="zwiń poziom" onclick="zwinjeden('formwzorcowy:dataListwzorcowy_data')" global="false" style="float: left; width: 130px;" />-->
+<p:commandButton id="koryguj pozycje" value="koryguj pozycje" actionListener="#{planKontView.korygujpozycje}"  global="false" style="float: left; width: 130px;" />
                 <p:spacer width="50"/>
                  <p:selectBooleanCheckbox itemLabel="tylko syntetyka" value="#{planKontView.tylkosyntetyka}">
                      <p:ajax event="change" global="false" partialSubmit="true" listener="#{planKontView.planBezSlownikowychSyntetyczne(WpisView.podatnikwzorcowy)}" update="formwzorcowy:dataListwzorcowy"/>
@@ -54,12 +55,17 @@
                         <f:selectItem itemLabel="bilansowe" itemValue="bilansowe"/>
                         <f:selectItem itemLabel="wynikowe" itemValue="wynikowe"/>
                   </p:selectOneMenu>
-                <p:outputLabel for="wybierzuklad" value="wybierz układ"/>
-                <p:selectOneMenu value="#{planKontView.wybranyukladwzorcowy}" converter="UkladBRWzorcowyConv" id="wybierzuklad">
+<!--                <p:outputLabel for="wybierzuklad" value="wybierz układ"/>-->
+<!--                <p:selectOneMenu value="#{planKontView.wybranyukladwzorcowy}" converter="UkladBRWzorcowyConv" id="wybierzuklad">
                        <f:selectItem itemLabel="brak układu" itemValue="" noSelectionOption="true"/>
                        <f:selectItems value="#{planKontView.listaukladowwzorcowy}" var="loop"  itemLabel="#{loop.uklad} - #{loop.rok}" itemValue="#{String.valueOf(loop.lp)}"/>
                        <p:ajax event="change" update="formwzorcowy:dataListwzorcowy" partialSubmit="true" listener="#{planKontView.zmienukladwzorcowy()}"/>
-                    </p:selectOneMenu>
+                    </p:selectOneMenu>-->
+                 <p:selectOneMenu id="rokWpisu" value="#{planKontView.rok}" >
+                    <f:selectItems value="#{roki.rokiList}"/>
+                    <p:ajax event="change" partialSubmit="true" listener="#{planKontView.aktualizuj}" update="formwzorcowy:dataListwzorcowy"/>
+                 </p:selectOneMenu>
+
             </p:panelGrid>
             <p:panelGrid columns="2">
                 <p:dataTable id="dataListwzorcowy" value="#{planKontView.wykazkontwzor}" var="loop"  selectionMode="single"
@@ -69,7 +75,7 @@
                                               (planKontView.kontadowyswietlenia eq 'wynikowe' ? (loop.przychod0koszt1 eq false ? 'rowb_szczegolne' : 'rowb_zwykle') : 
                                               (loop.bilansowewynikowe eq 'bilansowe' ? (loop.level eq 0 ? 'row1' : loop.level eq 1 ? 'row2' : loop.level eq 2 ? 'row3' : 'row4') : (loop.level eq 0 ? 'row1w' : (loop.level eq 1 ? 'row2w' : loop.level eq 2 ? 'row3w' : 'row4w'))))}"
                              styleClass="tablicaplankont"
-                             style="width: 1600px; height: 600px;" emptyMessage="Brak utworzonych kont dla firmy" rowKey="#{loop.id}"
+                             style="width: 1650px; height: 600px;" emptyMessage="Brak utworzonych kont dla firmy" rowKey="#{loop.id}"
                              sortFunction="#{kontoSortView.sortujKonto}" sortBy="#{loop}"
                              >
                     <p:ajax event="rowSelect" update=":formX, :dodawaniekontaanalitycznego, :dialogedycjanazwkontawzorcowy, :formedycjanazwwzorcowy" global="false" listener="#{planKontView.selrowwzorcowy()}"/>
@@ -135,7 +141,7 @@
                      <p:column  style="width: 100px;">
                         <h:outputText value="#{loop.pozycjaMa != null ? loop.pozycjaMa : 'nieprzyp.'}" /> 
                     </p:column>
-                <p:column headerText="bilans" style="width: 40px; text-align: center;">
+                <p:column headerText="bil/rzis" style="width: 40px; text-align: center;">
                         <p:selectBooleanCheckbox value="#{loop.saldodosprawozdania}">
                             <p:ajax event="change" listener="#{planKontView.edytujkontowzorcowe(loop)}" global="false"/>
                         </p:selectBooleanCheckbox>
