--- a/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
+++ b/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
@@ -148,7 +148,7 @@
                     </p:panelGrid>
                 </p:outputPanel>
                 <p:outputPanel style="margin-top: 50px;">
-                    <p:commandButton styleClass="buttonnorm" actionListener="#{pracownikDane2View.edit}" value="#{bundle.Save}" update="north PracownikCreateForm:wiadomosc" />
+                    <p:commandButton styleClass="buttonnorm" actionListener="#{pracownikDane2View.edit}" value="#{bundle.Save}" update="north PracownikCreateForm:wiadomosc PracownikCreateForm" />
                 </p:outputPanel>
                 <p:outputPanel style="margin-top: 50px;" id="wiadomosc">
                     <p:messages showDetail="false"/>
